ADDED :: Button in project

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <li class="breadcrumb-item"><a href="#">Library</a></li>
       <li class="breadcrumb-item active" aria-current="page">Data</li>
     </ol>
+  </nav>
 
     <!-- Alert -->
     <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -88,10 +89,27 @@
         99+
         <span class="visually-hidden">unread messages</span>
       </span>
+   
     </button>
+    
+    <br>
+    <br>
+
+    <!-- button -->
+    <button type="button" class="btn btn-danger">button1</button>
+    <button type="button" class="btn btn-outline-warning">button2</button>
+    <button type="button" class="btn btn-primary btn-lg">Large button</button>
+    <button type="button" class="btn btn-primary" disabled>Primary button</button>
+    <div class="d-grid gap-2">
+      <button class="btn btn-primary" type="button">Button</button>
+    </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
 
