ADDED :: Card in project

--- a/index.html
+++ b/index.html
@@ -104,7 +104,15 @@
       <button class="btn btn-primary" type="button">Button</button>
     </div>
 
-
+    <!-- card -->
+    <div class="card" style="width: 18rem;">
+      <img src="resources/erik-mclean-8SeJUmfahu0-unsplash.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Marevl</h5>
+        <p class="card-text">A world created by Stan Lee</p>
+        <a href="#" class="btn btn-primary">Go to somewhere</a>
+      </div>
+    </div>
 
 
 
